force-app/main/default/objects/Apttus__AgreementLock__c/Apttus__AgreementLock__c.object-meta.xml
<CustomObject>
    <description>Represents a lock on the agreement</description>
    <label>Agreement Lock</label>
    <nameField>
        <displayFormat>LK-{0000000000}</displayFormat>
        <label>Lock Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Locks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>