force-app/main/default/objects/Apttus__AgreementLock__c/fields/Apttus__LockedById__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LockedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the user who locked the agreement</description>
    <label>Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LockedAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>