force-app/main/default/objects/Apttus__AgreementLock__c/fields/Apttus__LockedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LockedDate__c</fullName>
    <description>Date the agreement was locked.</description>
    <label>Locked Date</label>
    <type>DateTime</type>
</CustomField>